--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@commitlint/cli": "^17.2.0",
         "@commitlint/config-conventional": "^17.2.0",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "autoprefixer": "^10.4.13",
         "commitizen": "^4.2.5",
         "cz-conventional-changelog": "^3.3.0",
         "eslint-config-prettier": "^8.5.0",
@@ -33,7 +34,9 @@
         "eslint-plugin-react": "^7.31.11",
         "husky": "^8.0.0",
         "lint-staged": "^13.0.3",
-        "prettier": "^2.7.1"
+        "postcss": "^8.4.19",
+        "prettier": "^2.7.1",
+        "tailwindcss": "^3.2.4"
     },
     "lint-staged": {
         "*.{css,less,scss,html,json,tsx,ts,jsx,ts}": [
